- 
    Type:
Bug
 - 
    Resolution: Fixed
 - 
    Priority:
  P3                     
     - 
    Affects Version/s: repo-panama
 - 
    Component/s: hotspot
 
                    Following tests crash with
#
# Error: assert(inlining_progress() || _virtual_late_inlines.length() == 0) failed
#
# JRE version: Java(TM) SE Runtime Environment (16.0) (fastdebug build 16-internal+0-2020-07-28-1829081.ekaterina.pavlova.jdk.panama-dev)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 16-internal+0-2020-07-28-1829081.ekaterina.pavlova.jdk.panama-dev, compiled mode, sharing, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x9cd8a6] Compile::inline_incrementally_virtual_one()+0x1f6
--------------- T H R E A D ---------------
Current thread (0x00007f91dc29f150): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=9234, stack(0x00007f91b8c42000,0x00007f91b8d43000)]
Current CompileTask:
C2: 44282 5783 b LongMaxVectorTests::ADDLongMaxVectorTestsBroadcastLongSmokeTest (126 bytes)
Stack: [0x00007f91b8c42000,0x00007f91b8d43000], sp=0x00007f91b8d3e640, free space=1009k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x9cd8a6] Compile::inline_incrementally_virtual_one()+0x1f6
V [libjvm.so+0x9d74cf] Compile::inline_incrementally_virtual(PhaseIterGVN&)+0xff
V [libjvm.so+0x9d7896] Compile::inline_incrementally(PhaseIterGVN&)+0x2d6
V [libjvm.so+0x9df0d3] Compile::Optimize()+0x463
V [libjvm.so+0x9e15db] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x15fb
V [libjvm.so+0x82d90f] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x19f
V [libjvm.so+0x9f11e0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xde0
V [libjvm.so+0x9f1fa8] CompileBroker::compiler_thread_loop()+0x6b8
V [libjvm.so+0x180fa5c] JavaThread::thread_main_inner()+0x21c
V [libjvm.so+0x18157e0] Thread::call_run()+0x100
V [libjvm.so+0x14d74c6] thread_native_entry(Thread*)+0x116
when running in Xcomp mode.
jdk/incubator/vector/Byte128VectorTests.java
jdk/incubator/vector/Byte256VectorTests.java
jdk/incubator/vector/Byte64VectorTests.java
jdk/incubator/vector/ByteMaxVectorTests.java
jdk/incubator/vector/Double128VectorTests.java
jdk/incubator/vector/Double256VectorTests.java
jdk/incubator/vector/DoubleMaxVectorTests.java
jdk/incubator/vector/Float128VectorTests.java
jdk/incubator/vector/Float256VectorTests.java
jdk/incubator/vector/Float64VectorTests.java
jdk/incubator/vector/FloatMaxVectorTests.java
jdk/incubator/vector/Int128VectorTests.java
jdk/incubator/vector/Int256VectorTests.java
jdk/incubator/vector/Int64VectorTests.java
jdk/incubator/vector/IntMaxVectorTests.java
jdk/incubator/vector/Long128VectorTests.java
jdk/incubator/vector/Long256VectorTests.java
jdk/incubator/vector/LongMaxVectorTests.java
The crashes are observed at least in vectorIntrinsics branch.
To reproduce run for example:
> jtreg -jdk:fastdebugBuild -vmoptions:"-ea -esa -Xcomp -XX:-TieredCompilation -XX:CompileThreshold=100"
-dir:open/test/jdk jdk/incubator/vector/Byte128VectorTests.java
#
# Error: assert(inlining_progress() || _virtual_late_inlines.length() == 0) failed
#
# JRE version: Java(TM) SE Runtime Environment (16.0) (fastdebug build 16-internal+0-2020-07-28-1829081.ekaterina.pavlova.jdk.panama-dev)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 16-internal+0-2020-07-28-1829081.ekaterina.pavlova.jdk.panama-dev, compiled mode, sharing, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x9cd8a6] Compile::inline_incrementally_virtual_one()+0x1f6
--------------- T H R E A D ---------------
Current thread (0x00007f91dc29f150): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=9234, stack(0x00007f91b8c42000,0x00007f91b8d43000)]
Current CompileTask:
C2: 44282 5783 b LongMaxVectorTests::ADDLongMaxVectorTestsBroadcastLongSmokeTest (126 bytes)
Stack: [0x00007f91b8c42000,0x00007f91b8d43000], sp=0x00007f91b8d3e640, free space=1009k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x9cd8a6] Compile::inline_incrementally_virtual_one()+0x1f6
V [libjvm.so+0x9d74cf] Compile::inline_incrementally_virtual(PhaseIterGVN&)+0xff
V [libjvm.so+0x9d7896] Compile::inline_incrementally(PhaseIterGVN&)+0x2d6
V [libjvm.so+0x9df0d3] Compile::Optimize()+0x463
V [libjvm.so+0x9e15db] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x15fb
V [libjvm.so+0x82d90f] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x19f
V [libjvm.so+0x9f11e0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xde0
V [libjvm.so+0x9f1fa8] CompileBroker::compiler_thread_loop()+0x6b8
V [libjvm.so+0x180fa5c] JavaThread::thread_main_inner()+0x21c
V [libjvm.so+0x18157e0] Thread::call_run()+0x100
V [libjvm.so+0x14d74c6] thread_native_entry(Thread*)+0x116
when running in Xcomp mode.
jdk/incubator/vector/Byte128VectorTests.java
jdk/incubator/vector/Byte256VectorTests.java
jdk/incubator/vector/Byte64VectorTests.java
jdk/incubator/vector/ByteMaxVectorTests.java
jdk/incubator/vector/Double128VectorTests.java
jdk/incubator/vector/Double256VectorTests.java
jdk/incubator/vector/DoubleMaxVectorTests.java
jdk/incubator/vector/Float128VectorTests.java
jdk/incubator/vector/Float256VectorTests.java
jdk/incubator/vector/Float64VectorTests.java
jdk/incubator/vector/FloatMaxVectorTests.java
jdk/incubator/vector/Int128VectorTests.java
jdk/incubator/vector/Int256VectorTests.java
jdk/incubator/vector/Int64VectorTests.java
jdk/incubator/vector/IntMaxVectorTests.java
jdk/incubator/vector/Long128VectorTests.java
jdk/incubator/vector/Long256VectorTests.java
jdk/incubator/vector/LongMaxVectorTests.java
The crashes are observed at least in vectorIntrinsics branch.
To reproduce run for example:
> jtreg -jdk:fastdebugBuild -vmoptions:"-ea -esa -Xcomp -XX:-TieredCompilation -XX:CompileThreshold=100"
-dir:open/test/jdk jdk/incubator/vector/Byte128VectorTests.java
- relates to
 - 
                    
JDK-8260279 JVM crashes in LateInlineVirtualCallGenerator::do_late_inline when using -XX:+PrintOptoInlining
-         
     - Open
 
 -         
 - 
                    
JDK-8260580 Merge LateInlineVirtualCallGenerator codes from upstream
-         
     - Closed
 
 -