8250740: Crash in Compile::inline_incrementally_virtual_one()