src/hotspot/share/opto/compile.hpp
@@ -385,8 +385,6 @@ class Compile : public Phase {
 
   GrowableArray<CallGenerator*> _vector_reboxing_late_inlines; // same but for vector reboxing operations
 
-  GrowableArray<CallGenerator*> _virtual_late_inlines; // List of CallGenerators to be revisited after
-
   int                           _late_inlines_pos;    // Where in the queue should the next late inlining candidate go (emulate depth first inlining)
   uint                          _number_of_mh_late_inlines; // number of method handle late inlining still pending
 
@@ -940,10 +938,6 @@ class Compile : public Phase {
     _late_inlines.insert_before(0, cg);
   }
 
-  void              prepend_virtual_late_inline(CallGenerator* cg)    {
-    _virtual_late_inlines.insert_before(0, cg);
-  }
-
   void              add_string_late_inline(CallGenerator* cg) {
     _string_late_inlines.push(cg);
   }
@@ -980,8 +974,6 @@ class Compile : public Phase {
   bool inline_incrementally_one();
   void inline_incrementally_cleanup(PhaseIterGVN& igvn);
   void inline_incrementally(PhaseIterGVN& igvn);
-  void inline_incrementally_virtual(PhaseIterGVN& igvn);
-  bool inline_incrementally_virtual_one();
   void inline_string_calls(bool parse_time);
   void inline_boxing_calls(PhaseIterGVN& igvn);
   bool optimize_loops(PhaseIterGVN& igvn, LoopOptsMode mode);
